--- a/Unit1/mp1/index.html
+++ b/Unit1/mp1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
+    <title>mp1</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="../../libs/p5.js"></script>
     <script src="../../libs/p5.dom.js"></script>
@@ -11,5 +11,7 @@
     <script src="sketch.js"></script>
   </head>
   <body>
+    <h4>This is Silver. While she is seemingly normal, well, as normal as a girl with blue hair and golden eyes can be, she has a secret power.<br>
+     Silver has the power of astronomical manipulation, meaning she can manipulate celestial/astronomical objects.</h4>
   </body>
 </html>
